GEM-19 Add ProposalHandler
Add Proposal Handler.
Find, FindMany, Store, Update, Delete. Update and Delete handlers are not implemented yet.
Store handler is just for test. It will be deprecated later.
