# docs/swagger.yaml
@@ -1,5 +1,117 @@
 basePath: /
 definitions:
+  domain.Movie:
+    properties:
+      content_id:
+        type: string
+      created_at:
+        type: string
+      description:
+        type: string
+      genre_id:
+        type: integer
+      id:
+        type: integer
+      maker_id:
+        type: integer
+      miners:
+        items:
+          $ref: '#/definitions/domain.User'
+        type: array
+      movie_uri:
+        type: string
+      thumbnail_uri:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  domain.Proposal:
+    properties:
+      content_id:
+        type: string
+      created_at:
+        type: string
+      deadline:
+        type: string
+      description:
+        type: string
+      document_uri:
+        type: string
+      estimated_production_time:
+        type: string
+      expected_release_year:
+        type: string
+      genre_id:
+        type: integer
+      id:
+        type: integer
+      maker_id:
+        type: integer
+      miners:
+        items:
+          $ref: '#/definitions/domain.User'
+        type: array
+      target_price:
+        type: integer
+      thumbnail_uri:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+    type: object
+  domain.User:
+    properties:
+      account:
+        type: string
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      movie:
+        items:
+          $ref: '#/definitions/domain.Movie'
+        type: array
+      movies:
+        items:
+          $ref: '#/definitions/domain.Movie'
+        type: array
+      name:
+        type: string
+      nickname:
+        type: string
+      password:
+        type: string
+      proposal:
+        items:
+          $ref: '#/definitions/domain.Proposal'
+        type: array
+      proposals:
+        items:
+          $ref: '#/definitions/domain.Proposal'
+        type: array
+      updated_at:
+        type: string
+    type: object
+  global.FindManyProposalRes:
+    properties:
+      proposals:
+        items:
+          $ref: '#/definitions/domain.Proposal'
+        type: array
+      success:
+        type: boolean
+    type: object
+  global.FindProposalRes:
+    properties:
+      err: {}
+      proposal:
+        $ref: '#/definitions/domain.Proposal'
+      success:
+        type: boolean
+    type: object
   global.LoginReq:
     properties:
       email:
@@ -27,6 +139,37 @@ definitions:
         type: string
     type: object
   global.RegisterRes:
+    properties:
+      err: {}
+      success:
+        type: boolean
+    type: object
+  global.StoreProposalReq:
+    properties:
+      content_id:
+        type: string
+      deadline:
+        type: string
+      description:
+        type: string
+      document_uri:
+        type: string
+      estimated_production_time:
+        type: string
+      expected_release_year:
+        type: string
+      genre_id:
+        type: integer
+      maker_id:
+        type: integer
+      target_price:
+        type: integer
+      thumbnail_uri:
+        type: string
+      title:
+        type: string
+    type: object
+  global.StoreProposalRes:
     properties:
       err: {}
       success:
@@ -167,4 +310,80 @@ paths:
       summary: Verify User Nickname
       tags:
       - auth
+  /api/v1/proposal:
+    get:
+      consumes:
+      - application/json
+      description: Proposal 조회합니다. Offset 받을 수 있고, Limit 20으로 고정입니다.
+      parameters:
+      - description: Offset
+        in: query
+        name: offset
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/global.FindManyProposalRes'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/global.FindManyProposalRes'
+      summary: Find Many Proposal
+      tags:
+      - proposal
+  /api/v1/proposal/{cid}:
+    get:
+      consumes:
+      - application/json
+      description: Proposal 세부 정보를 조회합니다.
+      parameters:
+      - description: ContentID
+        in: path
+        name: cid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/global.FindProposalRes'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/global.FindProposalRes'
+      summary: Find Single Proposal
+      tags:
+      - proposal
+  /api/v1/proposal/store:
+    post:
+      consumes:
+      - application/json
+      description: 테스트용 API 입니다. Polling 혹은 Listen 시스템 제작 시 삭제 예정입니다.
+      parameters:
+      - description: Store Req
+        in: body
+        name: StoreProposalReq
+        required: true
+        schema:
+          $ref: '#/definitions/global.StoreProposalReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/global.StoreProposalRes'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/global.StoreProposalRes'
+      summary: Store Proposal
+      tags:
+      - proposal
 swagger: "2.0"
